--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "npm": "^7.15.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
