--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "dotenv": "^8.6.0",
     "moment": "^2.29.1",
     "npm": "^7.15.1",
     "vue": "^2.6.11",
