still fixing problems with google auth

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-CLOUD=https://fulltimeforce.herokuapp.com
-LOCAL=http://localhost:5000
+VUE_APP_KEY_CLOUD=https://fulltimeforce.herokuapp.com
+VUE_APP_KEY_LOCAL=http://localhost:5000
+VUE_APP_KEY_GOOGLE_CLIENT_ID=784763271473-mfngi6muqqlvk5spuadfre52ebj7ts1a.apps.googleusercontent.com
+VUE_APP_KEY_GOOGLE_CLIENT_SECRET_ID=jYmwVFHA4JlyWwHRfP49ovjV
