--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "dotenv": "^8.6.0",
+    "dotenv-expand": "^5.1.0",
     "moment": "^2.29.1",
     "npm": "^7.15.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-google-login": "^2.0.5",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
