--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": "^7.15.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-google-login": "^2.0.5",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
